--- a/day3/task/css/styles.css
+++ b/day3/task/css/styles.css
@@ -1,21 +1,19 @@
 .main{
 	margin-left: 20%;
 	width: 800px;
-	background-color: gray;
 	font-size: 0px;
 }
 
-.fields-container{
+.field-container{
 	width: 624px;
 	margin: 2px;
 	display: inline-block;
 	background-color: white;
 	min-height: 300px;
-	background-color: red;
 	border: 1px solid black;
 }
 
-.fields-container .field{
+.field{
 	width: 50px;
 	display: inline-block;
 	vertical-align: top;
@@ -26,11 +24,22 @@
 	font-size: 14px;
 }
 
+.red-field{
+	background-color: #f44336;
+}
+
+.orange-field{
+	background-color: #ff9800;
+}
+
+.green-field{
+	background-color: #4caf50;
+}
+
 .buttons{
 	width: 120px;
 	display: inline-block;
 	vertical-align: top;
-	background-color: green;
 	min-height: 300px;
 }
 
@@ -43,5 +52,17 @@
 	text-align: center;
 	border: 1px solid black;
 	background-color: white;
+	-webkit-user-select: none;
+}
+
+.released-div{
+	cursor: pointer;
+	pointer-events: auto;
+}
+
+.blocked-div{
+	cursor: no-drop;
+	pointer-events: none;
+	opacity: 0.5;
 }
 
