--- a/day4/task/css/app.css
+++ b/day4/task/css/app.css
@@ -48,9 +48,6 @@ body {
 	background-color: #ff9800; 
 }
 
-.zombie { 
-}
-
 .zombie-field{
 	position: absolute; 
 	bottom: 0; 
@@ -59,14 +56,18 @@ body {
 
 .zombie-field .health{
 	display: inline-block;
-	height: 10px;
-	width: 100%;
+	height: 8px;
+	width: 96%;
 	background-color: orange;
-	font-size: 12px;
+	text-align: center;
+	padding-bottom: 4px;
+	font-size: 10px;
+	font-weight: bold;
 	border: 1px solid black;
+	opacity: 0.7;
 }
 
-.zombie.michael { 
+.zombie-michael { 
 	width: 46px; 
 	height: 69px; 
 	background-image: 
@@ -74,7 +75,7 @@ body {
 	background-size: cover; 
 }
 
-.zombie.strong { 
+.zombie-strong { 
 	width: 60px; 
 	height: 73px; 
 	background-image: 
